# playrec

./: .gitignore  CMakeLists.txt  README.md  compile_playrec.m  compile_portaudio.sh
cmake/: FindMatlab.cmake  FindOctave.cmake  FindPortaudio.cmake
lib/: .gitignore  README
m_files/: build_mex.m  compile_playrec_cmd.m  compile_playrec_func.m  compile_playrec_gui.fig  compile_playrec_gui.m  configure_octave_mex.m  find_folder.m  is_octave.m  is_os.m  resolve_paths.m
src/: CMakeLists.txt  mex_dll_core.c  mex_dll_core.h  pa_dll_playrec.c  pa_dll_playrec.h
